bk_ida/gccida/c3/loop_iterations
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4060:4: error: expected ';' after expression
rtx v77; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4060:5: error: use of undeclared identifier 'v77'
rtx v77; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4061:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4061:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4066:4: error: expected ';' after expression
rtx v83; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4066:5: error: use of undeclared identifier 'v83'
rtx v83; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4068:4: error: expected ';' after expression
rtx v85; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4068:5: error: use of undeclared identifier 'v85'
rtx v85; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4069:4: error: expected ';' after expression
rtx v86; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4069:5: error: use of undeclared identifier 'v86'
rtx v86; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4085:4: error: expected ';' after expression
rtx v102; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4085:5: error: use of undeclared identifier 'v102'
rtx v102; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4089:4: error: expected ';' after expression
rtx reg; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4089:5: error: use of undeclared identifier 'reg'
rtx reg; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4090:4: error: expected ';' after expression
rtx rega; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4090:5: error: use of undeclared identifier 'rega'
rtx rega; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4091:4: error: expected ';' after expression
rtx regb; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4091:5: error: use of undeclared identifier 'regb'
rtx regb; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/unroll.c:4092:4: error: expected ';' after expression
rtx v109; // [rsp+10h] [rbp-68h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/loop_iterations/src/obj/unroll.o] Error 1
